--- a/styles.css
+++ b/styles.css
@@ -4,33 +4,30 @@
   background-color: rgb(0, 0, 0);
 }
 
-body {
-  position: relative;
 
-  font-family: "Inter UI", sans-serif;
-  text-align: center;
-}
-
-h1 {
-  display: block;
-  font-size: 3rem;
-  margin: 0 0 24px 0;
+.title {
+  font-weight: bolder;
+  color: rgb(230, 182, 60);
+  letter-spacing: -3.5px;
+  text-transform: uppercase;
 }
 
 .topnav {
   overflow: hidden;
-  /* background-color: #333; */
   padding: 1vh;
   position: relative;
   bottom: 2vh;
 }
 
 .topnav a {
-  color: #f2f2f2;
+  
+  color: rgb(240, 191, 67);
   text-align: center;
-  padding: 1vh 3vw;
+  padding: 0vh 3vw;
+  border-radius: 10px;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .topnav a:hover {
@@ -44,51 +41,75 @@ h1 {
   color: white;
 } */
 
-address {
+body {
+  position: relative;
+  font-family: "Inter UI", sans-serif;
+  text-align: center;
+}
+
+h1 {
   display: block;
-  font-style: normal;
+  font-size: 3.5rem;
+  margin: 0 0 24px 0;
 }
 
-a {
-  font-weight: 300;
-  font-size: 5vw;
-  color: white;
-  text-decoration: none;
-}
+h2 {
+  font-weight: bold;
+  font-size: 1.35rem;
+  color:rgb(230, 182, 60);
 
-@media (max-width: 500px) {
-  h1 {
-    font-size: 15vw;
-  }
 }
 
 h3 {
-  font-weight: 300;
-  font-size: 24px;
+  font-weight: bold;
+  font-size: 1.25rem;
   color: white;
+  padding-left: .75rem;
+  padding-right: .75rem;
 }
 
 h4 {
   color: white;
 }
 
-a {
-  color: white;
-}
-
 p {
   color: white;
+  font-size: 1.2rem;
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
 
-.title {
-  font-weight: bolder;
-  color: rgb(209, 166, 55);
-  letter-spacing: -5px;
-  text-transform: uppercase;
-  padding: 0 16px;
+
+.logo {
+  height: 25vh;
+  width: 25vh;
+
 }
 
-.footer img {
-  height: 15rem;
-  width: 15rem;
+/* address {
+  display: block;
+  font-style: normal;
+} */
+
+
+
+@media (max-width: 500px) {
+  .topnav a {
+    font-size:1.3rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.2rem;
+  }
+
+  p {
+    font-size: 1.1rem;
+    padding-left: .75rem;
+    padding-right: .75rem;
+  }
 }
+
